Fix: 정적팩토리메서드 클래스 구현